# MAU_chatbot

./: .dockerignore  .gitignore  README.md  dockerfile  home.py  pyproject.toml
data/debug_output/: last_context.md
data/scraped_data_student_menu/: campus-life.json  certificate.json  enter-graduate.json  examination.json  faq.json  gpa.json  media.json  onlineplus.json  practice.json  qualification-course.json  registration.json  report.json  school.json  schooling.json  study.json  top.json  web-syllabus.json
data/vector_store/: metadata.json
make_database/: create_vector_db.py  syllabus_scraper.py  web_scraper.py
pages/: 01_質問チャットbot.py  02_シラバス検索.py
syllabus_search/: README.md  streamlit_app.py
syllabus_search/prompts/: system_prompt.txt
web_search/: rag_chat_core.py  streamlit_chat_app.py
web_search/prompts/: keyword_extraction_prompt.txt  rag_chat_prompt.txt
